// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with an expense correctly 1`] = `
<div>
  Viewing 
   expense
  s
   totalling 
  $1.95
</div>
`;

exports[`should render ExpensesSummary with multiple expenses correctly 1`] = `
<div>
  Viewing 
   expense
  s
   totalling 
  $1,141.95
</div>
`;
